auth y descarga y eliminacion realizados

--- a/microserviceAuth/appsettings.json
+++ b/microserviceAuth/appsettings.json
@@ -8,6 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "a_very_long_secret_key_that_is_at_least_32_characters"
+  }
 }
-
