segunda entrega terminada

--- a/microserviceAuth/appsettings.json
+++ b/microserviceAuth/appsettings.json
@@ -11,5 +11,9 @@
   "AllowedHosts": "*",
   "JwtSettings": {
     "SecretKey": "a_very_long_secret_key_that_is_at_least_32_characters"
+  },
+  "EncryptionSettings": {
+    "Key": "your-32-character-256-bit-secret",
+    "Iv": "your-128-bit-IV-"
   }
 }
