--- a/microserviceAuth/appsettings.json
+++ b/microserviceAuth/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=proyecto_info_aplicada;User=root;Password=root;"
+    "DefaultConnection": "Server=localhost;Database=proyecto_info_aplicada;User=root;Password=esteban;"
   },
   "Logging": {
     "LogLevel": {
